updating mobile view

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       </div>
       </div>
     <div class="right">
+      <div class="mobile">
+        <div class="mobile-woman"></div>
+        <div class="pattern"></div>
+      </div>
       <h1>FAQ</h1>
       <div class="text">
         <ul>
@@ -90,6 +94,5 @@
     Coded by <a href="https://github.com/codewithmide/FAQ-accordion-card.git">Olumide Micheal</a>.
   </div>
   <script defer src="script.js"></script>
->>>>>>> 40e9690953af0595f851c515714610df607d73a9
 </body>
 </html>
