--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  
   <div class="container">
     <div class="left">
       <div class="blur">
@@ -16,7 +17,9 @@
         <img src="./images/illustration-woman-online-desktop.svg" alt="illustration-woman-online-desktop" class="woman">
       </div>
       </div>
-    <div class="right">
+      <div class="right">
+        <div class="first"></div>
+        <div class="second"></div>
       <h1>FAQ</h1>
       <div class="text">
         <ul>
