--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
   <title>Frontend Mentor | FAQ Accordion Card</title>
@@ -24,8 +25,10 @@
     <div class="right">
       <div class="first"></div>
       <div class="second"></div>
-      <h1>FAQ</h1>
-      
+      <h1>
+        FAQ
+      </h1>
+
       <div class="text">
         <ul>
           <li class="dropdown">
@@ -35,68 +38,69 @@
               </h4>
               <img src="./images/icon-arrow-down.svg" alt="icon-arrow-down" class="arrow">
             </button>
-              <p>
-                You can invite up to 2 additional users on the Free plan. There is no limit on 
-                team members for the Premium plan.
-              </p>
-         </li>
+            <p>
+              You can invite up to 2 additional users on the Free plan. There is no limit on
+              team members for the Premium plan.
+            </p>
+          </li>
 
-         <li class="dropdown">
-          <button>
-            <h4>
-              What is the maximum file upload size?
-            </h4>
-            <img src="./images/icon-arrow-down.svg" alt="icon-arrow-down" class="arrow">
-          </button>
+          <li class="dropdown">
+            <button>
+              <h4>
+                What is the maximum file upload size?
+              </h4>
+              <img src="./images/icon-arrow-down.svg" alt="icon-arrow-down" class="arrow">
+            </button>
             <p>
               No more than 2GB. All files in your account must fit your allotted storage space.
             </p>
-        </li>
-          
-        <li class="dropdown">
-          <button>
-            <h4>
-              How do I reset my password?            
-            </h4>
-            <img src="./images/icon-arrow-down.svg" alt="icon-arrow-down"  class="arrow">
-          </button>
+          </li>
+
+          <li class="dropdown">
+            <button>
+              <h4>
+                How do I reset my password?
+              </h4>
+              <img src="./images/icon-arrow-down.svg" alt="icon-arrow-down" class="arrow">
+            </button>
             <p>
               Click “Forgot password” from the login page or “Change password” from your profile page.
               A reset link will be emailed to you.
             </p>
-        </li>
+          </li>
 
-        <li class="dropdown">
-          <button>
-            <h4>
-              Can I cancel my subscription?
-            </h4>
-            <img src="./images/icon-arrow-down.svg" alt="icon-arrow-down"  class="arrow">
-          </button>
+          <li class="dropdown">
+            <button>
+              <h4>
+                Can I cancel my subscription?
+              </h4>
+              <img src="./images/icon-arrow-down.svg" alt="icon-arrow-down" class="arrow">
+            </button>
             <p class="show">
               Yes! Send us a message and we’ll process your request no questions asked.
             </p>
-        </li>
+          </li>
 
-        <li class="dropdown">
-          <button>
-            <h4>
-              Do you provide additional support?
-            </h4>
-            <img src="./images/icon-arrow-down.svg" alt="icon-arrow-down" class="arrow">
-          </button>
+          <li class="dropdown">
+            <button>
+              <h4>
+                Do you provide additional support?
+              </h4>
+              <img src="./images/icon-arrow-down.svg" alt="icon-arrow-down" class="arrow">
+            </button>
             <p class="show">
               Chat and email support is available 24/7. Phone lines are open during normal business hours.
             </p>
-        </li>
-      </ul>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/codewithmide/FAQ-accordion-card.git">Olumide Micheal</a>.
   </div>
   <script defer src="script.js"></script>
 </body>
+
 </html>
