--- a/index.html
+++ b/index.html
@@ -13,26 +13,27 @@
 <body>
   <div class="container">
     <div class="left">
+
       <div class="blur">
+
         <img src="./images/illustration-box-desktop.svg" alt="illustration-box-desktop" class="box">
+
         <img src="./images/illustration-woman-online-desktop.svg" alt="illustration-woman-online-desktop" class="woman">
+        
       </div>
+
     </div>
 
     <div class="right">
       <div class="first"></div>
       <div class="second"></div>
-      <h1>
-        FAQ
-      </h1>
+      <h1>FAQ</h1>
 
       <div class="text">
         <ul>
           <li class="dropdown">
             <button>
-              <h4>
-                How many team members can I invite?
-              </h4>
+              <h4>How many team members can I invite?</h4>
               <img src="./images/icon-arrow-down.svg" alt="icon-arrow-down" class="arrow">
             </button>
             <p>
@@ -43,9 +44,7 @@
 
           <li class="dropdown">
             <button>
-              <h4>
-                What is the maximum file upload size?
-              </h4>
+              <h4>What is the maximum file upload size?</h4>
               <img src="./images/icon-arrow-down.svg" alt="icon-arrow-down" class="arrow">
             </button>
             <p>
@@ -55,9 +54,7 @@
 
           <li class="dropdown">
             <button>
-              <h4>
-                How do I reset my password?
-              </h4>
+              <h4>How do I reset my password?</h4>
               <img src="./images/icon-arrow-down.svg" alt="icon-arrow-down" class="arrow">
             </button>
             <p>
@@ -68,9 +65,7 @@
 
           <li class="dropdown">
             <button>
-              <h4>
-                Can I cancel my subscription?
-              </h4>
+              <h4>Can I cancel my subscription?</h4>
               <img src="./images/icon-arrow-down.svg" alt="icon-arrow-down" class="arrow">
             </button>
             <p class="show">
@@ -80,9 +75,7 @@
 
           <li class="dropdown">
             <button>
-              <h4>
-                Do you provide additional support?
-              </h4>
+              <h4>Do you provide additional support?</h4>
               <img src="./images/icon-arrow-down.svg" alt="icon-arrow-down" class="arrow">
             </button>
             <p class="show">
